[gd_scene format=3 uid="uid://cljqnurqsd5ui"]

[ext_resource type="FontFile" uid="uid://dbad0n42iah6j" path="res://fonts/Aurora.otf" id="1_gt22q"]
[ext_resource type="Script" uid="uid://c8nnngh21klxx" path="res://game_over_screen.gd" id="1_w3hxg"]

[node name="GameOverScreen" type="CanvasLayer" unique_id=1226748876]
script = ExtResource("1_w3hxg")

[node name="Title" type="Label" parent="." unique_id=315848543]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.5
offset_top = -59.5
offset_right = 300.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_gt22q")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnToHome" type="Button" parent="." unique_id=930324265]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = 76.0
offset_right = 88.5
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_gt22q")
theme_override_font_sizes/font_size = 64
text = "Home"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ReturnToHome" to="." method="_on_return_to_home_pressed"]
